# Trainee_Tasks

C/: base.c  divMN.c  divN.c  multipleN.c  odd.c  pascal.c  pyramid2rev.c  sequenceLen.c  square2rev.c  strCopy.c  strEqual.c  strReverse.c  strlen.c  upperCase.c
C++/: letters.cpp  words.cpp
C++/Date/: Date.cpp  Date.hpp  test.cpp
C++/PrimeIterator/: PrimeIterator.cpp  PrimeIterator.hpp  test.cpp
C++/customVector/: CustomVector.cpp  CustomVector.hpp  test.cpp
Multithreading/MemorySharing/: CMakeLists.txt  MemoryPart.cpp  MemoryPart.hpp  MemorySharing.cpp  MemorySharing.hpp  test.cpp
kernel/: Makefile  debug.c
